Entrega final - Update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- MAIN BEGINNING -->
       <main class="main-in">
         <div>
-          <nav class="navbar">
+          <nav class="nav-inicio">
             <a
               class="bandaloslogo"
               href="https://www.instagram.com/bandaloschinos/?hl=es"
