--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -6,40 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- ETIQUETAS SEO -->
-    <!-- Primary Meta Tags -->
-    <title>Bandalos Chinos</title>
-    <meta name="title" content="Bandalos Chinos" />
-    <meta
-      name="description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
+  <!-- Primary Meta Tags -->
+  <title>Bandalos Chinos</title>
+  <meta name="title" content="Bandalos Chinos" />
+  <meta name="description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
-    />
-    <meta property="og:title" content="Bandalos Chinos" />
-    <meta
-      property="og:description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
-    <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+  <meta property="og:title" content="Bandalos Chinos" />
+  <meta property="og:description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
+  <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
-    <meta property="twitter:title" content="Bandalos Chinos" />
-    <meta
-      property="twitter:description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
-    <meta
-      property="twitter:image"
-      href="../multimedia/Bandalos fondo index.jpg"
-    />
-    <link rel="icon" href="./multimedia/Bandalos Icon.png" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+  <meta property="twitter:title" content="Bandalos Chinos" />
+  <meta property="twitter:description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
+  <meta property="twitter:image" href="../multimedia/Bandalos fondo index.jpg" />
+  <link rel="icon" href="./multimedia/Bandalos Icon.png" />
   <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -88,7 +76,7 @@
 
   <!-- MAIN BEGINNING -->
   <main class="main-disc">
-    <h2>Descubre un poco de nuestra musica y la historia detras de cada album</h2>
+    <h1>Descubre un poco de nuestra musica y la historia detras de cada album</h1>
 
     <section class="spot1">
       <iframe style="border-radius:12px"
@@ -96,18 +84,34 @@
         frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       <div class="spot1-div">
-        <h1>BACH</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugiat maxime inventore similique repellat
-          placeat voluptatum nobis? Dolores alias magni voluptatem nisi! Non at, quis cum asperiores magni quo tenetur.
+        <h2>BACH</h2>
+        <p>Su segundo disco, titulado BACH, fue publicado el 3 de agosto de 2018, grabado en los estudios Sonic Ranch de
+          Estados Unidos con la producción de Adán Jodorowsky, Jack Lahana y de la propia banda.5​ El disco terminó
+          siendo no solo el más exitoso de la banda, y la escena del indie argentino, esto hace que recorran toda la
+          Argentina, y viajen a México tres veces en menos de un año (incluida su participación en el Vive Latino 2019).
+          Se desprenden clásicos como «Vámonos de viaje», «Demasiado», «El club de la montaña», «Tu órbita», entre
+          otros.
+          <br>
+          <br>
+          El 4 de agosto de 2019, publican el sencillo «Departamento» en colaboración con Adán Jodorowsky, teniendo un
+          gran éxito al igual que los sencillos anteriores.
         </p>
       </div>
     </section>
 
     <section class="spot2">
       <div class="spot2-div">
-        <h1>EL BIG BLUE</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugiat maxime inventore similique repellat
-          placeat voluptatum nobis? Dolores alias magni voluptatem nisi! Non at, quis cum asperiores magni quo tenetur.
+        <h2>El Big Blue</h2>
+        <p>Su cuarto disco, El Big Blue, fue publicado el 6 de mayo de 2022, nuevamente con la participación de artistas
+          invitados como Tei Shi y David Aguilar, grabado en el estudio Sonic Ranch en abril de 2021 y con la producción
+          a cargo de Adan Jodorowsky. Fue compuesto exclusivamente en pandemia. Se desprenden sencillos como «Mi
+          fiesta», «Una propuesta», «Cállame» (con un videoclip caracterizado de apertura de novela mexicana), «La
+          final», etc.
+          <br>
+          <br>
+          Durante todo 2022, tienen programada una gira bajo el nombre de Big Blue Tour por toda España (incluida su
+          participación en el Primavera Sound), Latinoamérica (debutando en la mayoría de países) y Argentina. La
+          presentación oficial del disco será el 22 de octubre en el Estadio Luna Park.
         </p>
       </div>
       <iframe style="border-radius:12px"
@@ -122,11 +126,41 @@
         frameBorder="0" allowfullscreen=""
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       <div class="spot3-div">
-        <h1>FELIZ NAVIBACH</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum fugiat maxime inventore similique repellat
-          placeat voluptatum nobis? Dolores alias magni voluptatem nisi! Non at, quis cum asperiores magni quo tenetur.
+        <h2>Feliz Navibach</h2>
+        <p>Feliz Navibach tiene varias versiones cantadas por sus compositores, como pueden ser “Paranoia pop”, que
+          incluye un rap reggeatonero del propio Salvador Colombo o “El club de la montaña”, que presenta un estribillo
+          totalmente diferente al que encontramos en BACH (2018).
+          <br>
+          <br>
+          Sin dudas uno de los regalos más sorpresivos es “Canción para naufragios”, de Patricio Rey y sus Redonditos de
+          Ricota perteneciente al álbum Oktubre (1986). En este cover grabado en el marco de un homenaje, los Bach
+          juegan con el sonido típico del post-punk de los Redondos y lo llevan a un plano un poco más pop, pero sin
+          abandonar la oscuridad original.
         </p>
       </div>
+    </section>
+
+    <section class="spot4">
+      <div class="spot4-div">
+        <h2>Paranoia Pop</h2>
+        <p>Su tercer disco, Paranoia Pop, es lanzado el 9 de octubre de 2020, con la participación de artistas
+          invitados como LOUTA, Tei Shi y David Aguilar. Como su antecesor, fue grabado en el estudio Sonic Ranch y
+          contó con la producción de Adan Jodorowsky y la mezcla de Jack Lahana. A partir de este punto, a los shows en
+          vivo se les sumó la percusión en vivo del músico y productor Maxi Sayes. Se desprenden temas como «Sin señal»
+          o «Paranoia pop» a dúo con LOUTA.
+          <br>
+          <br>
+          La presentación del disco fue el 29 de octubre de 2020 con un musical por streaming en el Movistar Arena,
+          comenzando así el Paranoia Tour. En 2021, realizan una gira extensa recorriendo todo México en los meses de
+          agosto y septiembre, lanzando dos nuevos sencillos, finalizando el año el 11 de diciembre con un show en el
+          Hipódromo de Palermo ante 5000 personas, siendo el show más multitudinario de su carrera y culminando el
+          Paranoia Tour el 1° de mayo de 2022 en el festival Quilmes Rock.
+        </p>
+      </div>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/album/7oKpkZ7JZqjK4GP5cyKCyV?utm_source=generator" width="100%" height="352"
+        frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
   </main>
   <!-- MAIN END -->
