--- a/pages/touring.html
+++ b/pages/touring.html
@@ -6,40 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- ETIQUETAS SEO -->
-    <!-- Primary Meta Tags -->
-    <title>Bandalos Chinos</title>
-    <meta name="title" content="Bandalos Chinos" />
-    <meta
-      name="description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
+  <!-- Primary Meta Tags -->
+  <title>Bandalos Chinos</title>
+  <meta name="title" content="Bandalos Chinos" />
+  <meta name="description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
-    />
-    <meta property="og:title" content="Bandalos Chinos" />
-    <meta
-      property="og:description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
-    <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+  <meta property="og:title" content="Bandalos Chinos" />
+  <meta property="og:description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
+  <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
-    <meta property="twitter:title" content="Bandalos Chinos" />
-    <meta
-      property="twitter:description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
-    <meta
-      property="twitter:image"
-      href="../multimedia/Bandalos fondo index.jpg"
-    />
-    <link rel="icon" href="./multimedia/Bandalos Icon.png" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+  <meta property="twitter:title" content="Bandalos Chinos" />
+  <meta property="twitter:description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
+  <meta property="twitter:image" href="../multimedia/Bandalos fondo index.jpg" />
+  <link rel="icon" href="./multimedia/Bandalos Icon.png" />
   <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -88,56 +76,66 @@
 
   <!-- MAIN BEGINNING -->
   <main class="main-jour">
-    <h2>
-      Conoce un poco de nuestros viajes y toures </h2>
+    <h1>Conoce un poco de nuestros viajes a los largo de nuestra historia</h1>
 
-    <section class="grid">
-      <div class="caja c1">
-        <img src="../multimedia/Bandalos disc 1.jpg" alt="">
-        <div class="caja__content">
-          <h2>Bandalos Chinos</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod labore reiciendis quasi natus porro!
-            Deleniti eos molestias totam incidunt asperiores aperiam debitis enim quis nam, quos fugit unde blanditiis
-            sed sapiente nesciunt ipsam aliquid deserunt!.</p>
+    <div class="container text-center">
+      <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+      <div class="row">
+        <div class="row-text">
+          <p>Bandalos Chinos es una de las bandas más importantes de la escena actual argentina. Llevan editados BACH,
+            Paranoia Pop y este año lanzan El Big Blue, un disco que al igual que sus anteriores, fue grabado en Sonic
+            Ranch bajo la producción de Adan Jodorowsky y cuenta con 11 canciones, entre ellas los ya lanzados Mi
+            Fiesta, Una Propuesta y La Final.
+            <br>
+            <br>
+            Bandalos chinos es una banda formada en Buenos Aires, Argentina. Han sido ganadores de un Premio Gardel en
+            la categoría Mejor Álbum Pop. Ademas, la banda estuvo nominada a dos premio Latin GRAMMY. Con mas de 10 años
+            de carrera, Bandalos Chinos en 2022 recorrerá gran parte del mundo con su Big Blue Tour pasando por Europa y
+            gran parte de America Latina. Colombia y Medellín formará parte de este tour.
+          </p>
         </div>
+        <section class="row disc-1floor">
+          <div class="col-md-6">
+            <p>
+            Bogota, Colombia
+          </p>
+            <img src="../multimedia/Bogota colombia.jpg" alt="">
+          </div>
+          <div class="col-12 col-md-6">
+            <p>
+            Paraguay
+          </p>
+            <img src="../multimedia/Paraguay.jpg" alt="">
+          </div>
+        </section>
       </div>
-      <div class="caja c2">
-        <img src="../multimedia/Bandalos disc 2.jpg" alt="">
-        <div class="caja__content">
-          <h2>Bandalos Chinos</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia velit cupiditate at sed quos recusandae
-            dolorem ipsam asperiores aliquam repellendus.</p>
-        </div>
-      </div>
-      <div class="caja c3">
-        <img src="../multimedia/Bandalos disc 3.jpg" alt="">
-        <div class="caja__content">
-          <h2>Bandalos Chinos</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis consequatur soluta esse at quisquam et
-            eum quasi quod facere incidunt nulla, ut praesentium quidem ipsam sed vero velit excepturi porro. Repellat
-            molestiae corporis pariatur deleniti eaque quaerat error, ipsum recusandae!</p>
-        </div>
-      </div>
-      <div class="caja c4">
-        <img src="../multimedia/Bandalos disc 4.jpg" alt="">
-        <div class="caja__content">
-          <h2>Bandalos Chinos</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis est voluptatem impedit quaerat unde
-            inventore, dolore exercitationem doloribus a illo itaque blanditiis, esse perspiciatis iste odit tenetur
-            magnam dignissimos! Debitis sapiente soluta excepturi maxime labore.</p>
-        </div>
-      </div>
-      <div class="caja c5">
-        <div class="caja__content">
-          <h2>Bandalos Chinos</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia velit cupiditate at sed quos recusandae
-            dolorem ipsam asperiores aliquam repellendus.</p>
-        </div>
-        <img src="../multimedia/Bandalos disc 5.jpg" alt="">
 
+      <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+      <div class="row disc-2floor">
+        <div class="col-6 col-md-6">
+          <p>
+          CDMX
+        </p>
+          <img src="../multimedia/cdmx.jpg" alt="">
+        </div>
+        <div class="col-6 col-md-6"><p>
+          Cordoba
+        </p>
+          <img src="../multimedia/cordoba.jpg" alt="">
+        </div>
+        <div class="col-6 col-md-6"><p>
+          Perú
+        </p>
+          <img src="../multimedia/peru.jpg" alt="">
+        </div>
+        <div class="col-6 col-md-6"><p>
+          Medellín
+        </p>
+          <img src="../multimedia/Rionegro.jpg" alt="">
+        </div>
       </div>
-    </section>
 
+    </div>
 
 
 
