--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -79,10 +79,7 @@
     <h1>Descubre un poco de nuestra musica y la historia detras de cada album</h1>
 
     <section class="spot1">
-      <iframe style="border-radius:12px"
-        src="https://open.spotify.com/embed/album/6HZ9qdQUobF9C9ovVnRjNg?utm_source=generator" width="100%" height="352"
-        frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6HZ9qdQUobF9C9ovVnRjNg?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       <div class="spot1-div">
         <h2>BACH</h2>
         <p>Su segundo disco, titulado BACH, fue publicado el 3 de agosto de 2018, grabado en los estudios Sonic Ranch de
