--- a/pages/touring.html
+++ b/pages/touring.html
@@ -112,23 +112,23 @@
 
       <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
       <div class="row disc-2floor">
-        <div class="col-6 col-md-6">
+        <div class="img1 col-6 col-md-6">
           <p>
           CDMX
         </p>
           <img src="../multimedia/cdmx.jpg" alt="">
         </div>
-        <div class="col-6 col-md-6"><p>
+        <div class="img2 col-6 col-md-6"><p>
           Cordoba
         </p>
           <img src="../multimedia/cordoba.jpg" alt="">
         </div>
-        <div class="col-6 col-md-6"><p>
+        <div class="img3 col-6 col-md-6"><p>
           Perú
         </p>
           <img src="../multimedia/peru.jpg" alt="">
         </div>
-        <div class="col-6 col-md-6"><p>
+        <div class="img4 col-6 col-md-6"><p>
           Medellín
         </p>
           <img src="../multimedia/Rionegro.jpg" alt="">
