Entrega final - Update

--- a/index.html
+++ b/index.html
@@ -55,36 +55,39 @@
   </head>
 
   <body class="body-ind">
-    <section class="sect-main">
-      <!-- MAIN BEGINNING -->
-      <main class="main-in">
-        <div>
-          <nav class="nav-inicio">
-            <a
-              class="bandaloslogo"
-              href="https://www.instagram.com/bandaloschinos/?hl=es"
-              target="_blank"
-              >Bandalos Chinos</a
-            >
-            <ul>
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="./pages/about.html">Nosotros</a></li>
-              <li><a href="./pages/historia.html">Historia</a></li>
-              <li><a href="./pages/discografia.html">Discografia</a></li>
-              <li><a href="./pages/touring.html">Touring</a></li>
-            </ul>
-          </nav>
-        </div>
-        <video autoplay loop>
-          <source
-            src="./multimedia/Bandalos Chinos - La Final.mp4"
-            type="video/mp4"
-          />
-        </video>
-        <div class="capa"></div>
-      </main>
+    <section class="container1">
+      
+      <!-- NAV -->
+      <div>
+        <nav class="nav-inicio">
+          <a
+            class="bandaloslogo"
+            href="https://www.instagram.com/bandaloschinos/?hl=es"
+            target="_blank"
+            >Bandalos Chinos</a
+          >
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./pages/about.html">Nosotros</a></li>
+            <li><a href="./pages/historia.html">Historia</a></li>
+            <li><a href="./pages/discografia.html">Discografia</a></li>
+            <li><a href="./pages/touring.html">Touring</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- VIDEO -->
+      <div class="video-container">
+        <video
+          muted
+          autoplay
+          loop
+          src="./multimedia/Bandalos Chinos - La Final.mp4"
+        ></video>
+      </div>
     </section>
-    <!-- MAIN END -->
+
+    <!-- <div class="capa"></div> -->
 
     <!-- BOOSTRAP -->
     <script
