Entrega final - Update

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -1,122 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- ETIQUETAS SEO -->
-    <!-- Primary Meta Tags -->
-    <title>Bandalos Chinos</title>
-    <meta name="title" content="Bandalos Chinos" />
-    <meta
-      name="description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/"
-    />
-    <meta property="og:title" content="Bandalos Chinos" />
-    <meta
-      property="og:description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
-    <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ETIQUETAS SEO -->
+  <!-- Primary Meta Tags -->
+  <title>Bandalos Chinos</title>
+  <meta name="title" content="Bandalos Chinos" />
+  <meta name="description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
-    <meta property="twitter:title" content="Bandalos Chinos" />
-    <meta
-      property="twitter:description"
-      content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical."
-    />
-    <meta
-      property="twitter:image"
-      href="../multimedia/Bandalos fondo index.jpg"
-    />
-    <link rel="icon" href="./multimedia/Bandalos Icon.png" />
-    <!-- Link a BOOSTRAP -->
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+  <meta property="og:title" content="Bandalos Chinos" />
+  <meta property="og:description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
+  <meta property="og:image" href="../multimedia/Bandalos fondo index.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://molinacastt.github.io/PreEntrega3molinacasta-eda/" />
+  <meta property="twitter:title" content="Bandalos Chinos" />
+  <meta property="twitter:description"
+    content="Conoce mas de Bandalos chinos, sus integrantes y toda su historia a lo largo de su carrera musical." />
+  <meta property="twitter:image" href="../multimedia/Bandalos fondo index.jpg" />
+  <link rel="icon" href="./multimedia/Bandalos Icon.png" />
+  <!-- Link a BOOSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="icon" href="../multimedia/Bandalos Icon.png">
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="../CSS/style.css" />
+  <link rel="icon" href="../multimedia/Bandalos Icon.png">
 
 
-    <title>Bandalos Chinos</title>
-  </head>
-  <body>
-    <!-- HEADER BEGINNING -->
-    <header>
-      <div class="logo"></div>
-      <nav class="navbar navbar-expand-lg bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/touring.html">Touring</a>
-              </li>
-              </li>
-            </ul>
-          </div>
+  <title>Bandalos Chinos</title>
+</head>
+
+<body>
+  <!-- HEADER BEGINNING -->
+  <header>
+    <div class="logo"></div>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Bandalos Chinos</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/about.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/historia.html">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/discografia.html">Discografia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/touring.html">Touring</a>
+            </li>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-    <!-- HEADER END -->
+      </div>
+    </nav>
+  </header>
+  <!-- HEADER END -->
 
-    <!-- MAIN BEGINNING -->
-    <main class="main-hist">
-      <h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-        facere et unde dignissimos, odio laborum quibusdam eveniet quod alias,
-        ipsa fuga praesentium tempora eum ad aperiam minima veritatis. Maxime
-        architecto, ullam sequi accusamus facilis tempore ea illum repellendus
-        nisi sit deleniti cumque dicta laudantium eum fuga quia quibusdam
-        dignissimos vel?
-      </h2>
-    </main>
-    <!-- MAIN END -->
+  <!-- MAIN BEGINNING -->
+  <main class="main-hist">
+    <div class="hist1">
+    <h1>Inicios y disco debut (2009-2013)</h1>
+    <p>Iñaki Colombo y Gregorio "Goyo" Degano se conocieron en el colegio en San Fernando y tocan juntos desde los
+      catorce años. Cuando terminaron el secundario en 2009, armaron Bandalos Chinos en la ciudad de Beccar, en la
+      zona norte del Gran Buenos Aires. Su primer disco fue editado en 2012 y llevó el nombre de la banda, siendo
+      presentado en el Auditorium San Isidro el 26 de octubre de ese mismo año. Aunque según declaraciones de la banda,
+      es un disco que sienten que no los representa, la banda contaba con una formación diferente; solo está disponible
+      en Bandcamp y en formato físico.</p>
+    </div>
+  </main>
+  <!-- MAIN END -->
 
-    <!-- FOOTER BEGINNING -->
-    <footer class="footer">
-      <h2>Integrantes:</h2>
-      <p>
-        <ul>
-          <li>Gregorio Degano</li>
-          <li>Salvador Colombo</li>
-          <li>Tomás Verduga</li>
-          <li>Matías Verduga</li>
-          <li>Iñaki Colombo</li>
-          <li>Nicolás Rodríguez del Pozo</li>
-      </ul>
-      </p>
+  <!-- FOOTER BEGINNING -->
+  <footer class="footer">
+    <h2>Integrantes:</h2>
+    <p>
+    <ul>
+      <li>Gregorio Degano</li>
+      <li>Salvador Colombo</li>
+      <li>Tomás Verduga</li>
+      <li>Matías Verduga</li>
+      <li>Iñaki Colombo</li>
+      <li>Nicolás Rodríguez del Pozo</li>
+    </ul>
+    </p>
 
-      <h3>Béccar, Argentina (2009)</h3>
-    </footer>
-    <!-- FOOTER END -->
-    <!-- BOOSTRAP -->
+    <h3>Béccar, Argentina (2009)</h3>
+  </footer>
+  <!-- FOOTER END -->
+  <!-- BOOSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-  crossorigin="anonymous"></script>
-  </body>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
