Entrega final - Update

--- a/pages/about.html
+++ b/pages/about.html
@@ -94,8 +94,7 @@
         <p>Goyo Degano es el cantante de Bandalos Chinos, uno de los grupos referentes del nuevo pop argentino y
           protagonista de la primera fecha de La Nueva Generación en 2019, junto al chileno Francisco Victoria. Degano
           es, además, un frontman carismático y con estilo propio, que aporta dinamismo escénico a una banda cada vez
-          más sólida sobre el escenario. A continuación, algunas preguntas para conocer su costado más vinculado a la
-          estética y la imagen.
+          más sólida sobre el escenario. 
         </p>
       </div>
     </div>
