--- a/pages/historia.html
+++ b/pages/historia.html
@@ -77,13 +77,54 @@
   <!-- MAIN BEGINNING -->
   <main class="main-hist">
     <div class="hist1">
-    <h1>Inicios y disco debut (2009-2013)</h1>
-    <p>Iñaki Colombo y Gregorio "Goyo" Degano se conocieron en el colegio en San Fernando y tocan juntos desde los
-      catorce años. Cuando terminaron el secundario en 2009, armaron Bandalos Chinos en la ciudad de Beccar, en la
-      zona norte del Gran Buenos Aires. Su primer disco fue editado en 2012 y llevó el nombre de la banda, siendo
-      presentado en el Auditorium San Isidro el 26 de octubre de ese mismo año. Aunque según declaraciones de la banda,
-      es un disco que sienten que no los representa, la banda contaba con una formación diferente; solo está disponible
-      en Bandcamp y en formato físico.</p>
+      <h1>Inicios y disco debut (2009-2013)</h1>
+      <p>Iñaki Colombo y Gregorio "Goyo" Degano se conocieron en el colegio en San Fernando y tocan juntos desde los
+        catorce años. Cuando terminaron el secundario en 2009, armaron Bandalos Chinos en la ciudad de Beccar, en la
+        zona norte del Gran Buenos Aires. Su primer disco fue editado en 2012 y llevó el nombre de la banda, siendo
+        presentado en el Auditorium San Isidro el 26 de octubre de ese mismo año. Aunque según declaraciones de la
+        banda,
+        es un disco que sienten que no los representa, la banda contaba con una formación diferente; solo está
+        disponible
+        en Bandcamp y en formato físico.</p>
+    </div>
+    <hr>
+    <hr>
+    <div class="hist2">
+      <h1>Nunca estuve acá y En el aire (2014-2016)</h1>
+      <p>Posterior al lanzamiento de su álbum debut, lanzan Nunca estuve acá el 24 de diciembre de 2014, un EP con seis
+        temas que varían entre el electropop y el synthpop, sumandose acá "Lobo" como bajista de la banda. El 22 de
+        diciembre de 2016 editan En el aire, EP del cual se destaca la canción «Isla» (posteriormente lanzarían una
+        versión remix de la canción a cargo de Pyura), siguiendo la misma línea que el trabajo anterior. Posteriormente
+        participan de la edición argentina del Lollapalooza 2017, siendo su primera participación en el festival.</p>
+    </div>
+    <hr>
+    <hr>
+    <div class="hist3">
+      <h1>Influencias</h1>
+      <p>La banda reconoce entre sus influencias a Luis Alberto Spinetta y Tame Impala. La prensa también los ha
+        comparado con Phoenix, Virus, Suéter y el grupo sueco ABBA.</p>
+    </div>
+    <hr>
+    <hr>
+    <div class="hist4">
+      <div class="hist4img">
+        <div class="singles">
+          <h1>Singles</h1>
+          <ul>
+            <li>"Vámonos de viaje" (2018)</li>
+            <li>"Demasiado" (2018)</li>
+            <li>"Tu órbita" (2019)</li>
+            <li>"Departamento" (2019)</li>
+            <li>"Mi manera de ser" / "AYNMG" (2020)</li>
+            <li>"Sin señal" (2020)</li>
+            <li>"El ídolo" (2020)</li>
+            <li>"Mi fiesta" (2021)</li>
+            <li>"Una propuesta" (2021)</li>
+            <li>"Me estoy enamorando" (2023)</li>
+          </ul>
+        </div>
+        <img src="../multimedia/bandalos historia singles.jpg" alt="">
+      </div>
     </div>
   </main>
   <!-- MAIN END -->
