--- a/index.html
+++ b/index.html
@@ -75,18 +75,11 @@
         </nav>
       </div>
 
-      <!-- VIDEO -->
-      <div class="video-container">
-        <video
-          autoplay
-          loop
-          src="./multimedia/Bandalos Chinos - La Final.mp4"
-        ></video>
+      <!-- IMAGE  -->
+      <div class="image-container">
+        <img src="./multimedia/Matias verduga.jpg" alt="" />
       </div>
     </section>
-
-    <!-- <div class="capa"></div> -->
-
     <!-- BOOSTRAP -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
